--- a/binding/mdsal-binding-test-model/pom.xml
+++ b/binding/mdsal-binding-test-model/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.8.1-Beryllium-SR1</version>
+        <version>0.8.2-SNAPSHOT</version>
         <relativePath>../binding-parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
