--- a/common/mdsal-common-api/pom.xml
+++ b/common/mdsal-common-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-parent</artifactId>
-    <version>2.0.1-Beryllium-SR1</version>
+    <version>2.0.2-SNAPSHOT</version>
     <relativePath>../parent</relativePath>
   </parent>
 
