--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-parent</artifactId>
-        <version>2.0.1-Beryllium-SR1</version>
+        <version>2.0.2-SNAPSHOT</version>
         <relativePath>../common/parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mdsal-dom</artifactId>
-    <version>2.0.1-Beryllium-SR1</version>
+    <version>2.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
