--- a/model/features/pom.xml
+++ b/model/features/pom.xml
@@ -12,18 +12,18 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>features-parent</artifactId>
-        <version>1.6.1-Beryllium-SR1</version>
+        <version>1.6.2-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.mdsal.model</groupId>
     <artifactId>features-mdsal-model</artifactId>
-    <version>0.8.1-Beryllium-SR1</version>
+    <version>0.8.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
-      <yangtools.version>0.8.1-Beryllium-SR1</yangtools.version>
-      <mdsal.version>2.0.1-Beryllium-SR1</mdsal.version>
+      <yangtools.version>0.8.2-SNAPSHOT</yangtools.version>
+      <mdsal.version>2.0.2-SNAPSHOT</mdsal.version>
     </properties>
 
     <dependencyManagement>
@@ -45,7 +45,7 @@
             <dependency>
                 <groupId>org.opendaylight.mdsal.model</groupId>
                 <artifactId>mdsal-model-artifacts</artifactId>
-                <version>0.8.1-Beryllium-SR1</version>
+                <version>0.8.2-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
