--- a/model/iana/pom.xml
+++ b/model/iana/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>model-parent</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.1-Beryllium-SR1</version>
+        <version>0.8.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
