--- a/model/ietf/ietf-interfaces/pom.xml
+++ b/model/ietf/ietf-interfaces/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.1-Beryllium-SR1</version>
+        <version>0.8.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-interfaces</artifactId>
-    <version>2014.05.08.8.1-Beryllium-SR1</version>
+    <version>2014.05.08.8.2-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
