--- a/model/yang-ext/pom.xml
+++ b/model/yang-ext/pom.xml
@@ -12,13 +12,13 @@
     <parent>
         <artifactId>model-parent</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.1-Beryllium-SR1</version>
+        <version>0.8.2-SNAPSHOT</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>yang-ext</artifactId>
-    <version>2013.09.07.8.1-Beryllium-SR1</version>
+    <version>2013.09.07.8.2-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
