--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-parent</artifactId>
-      <version>2.0.1-Beryllium-SR1</version>
+      <version>2.0.2-SNAPSHOT</version>
       <relativePath>common/parent</relativePath>
     </parent>
 
@@ -55,7 +55,7 @@
                    <dependency>
                      <groupId>org.opendaylight.yangtools</groupId>
                      <artifactId>checkstyle-logging</artifactId>
-                     <version>0.8.1-Beryllium-SR1</version>
+                     <version>0.8.2-SNAPSHOT</version>
                    </dependency>
                  </dependencies>
                  <executions>
