--- a/common/features/odl-mdsal-dom-broker/pom.xml
+++ b/common/features/odl-mdsal-dom-broker/pom.xml
@@ -74,6 +74,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>mdsal-dom-broker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>odl-mdsal-dom-schema-service-osgi</artifactId>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
     </dependencies>
 
     <!--
