--- a/common/features/odl-mdsal-dom-schema-service-osgi/pom.xml
+++ b/common/features/odl-mdsal-dom-schema-service-osgi/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright © 2016, 2017 Red Hat, Inc. and others.  All rights reserved.
+ Copyright © 2017 Pantheon Technologies s.r.o. and others.  All rights reserved.
 
  This program and the accompanying materials are made available under the
  terms of the Eclipse Public License v1.0 which accompanies this distribution,
@@ -14,16 +14,16 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>2.0.5</version>
+        <version>2.0.4</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.mdsal</groupId>
-    <artifactId>odl-mdsal-dom</artifactId>
+    <artifactId>odl-mdsal-dom-schema-service-osgi</artifactId>
     <version>2.4.0-SNAPSHOT</version>
     <packaging>feature</packaging>
 
-    <name>OpenDaylight :: MD-SAL :: DOM</name>
+    <name>OpenDaylight :: MD-SAL :: DOM Schema Service OSGi</name>
 
     <dependencyManagement>
         <dependencies>
@@ -31,8 +31,8 @@
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-artifacts</artifactId>
                 <version>${project.version}</version>
-                <scope>import</scope>
                 <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -40,9 +40,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>odl-mdsal-dom-broker</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <artifactId>mdsal-dom-schema-service-osgi</artifactId>
         </dependency>
     </dependencies>
 
