--- a/model-binding2/yang-ext/pom.xml
+++ b/model-binding2/yang-ext/pom.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- vi: set et smarttab sw=4 tabstop=4: -->
 <!--
- Copyright (c) 2017 Cisco Systems, Inc. and others.  All rights reserved.
+  ~ Copyright (c) 2017 Cisco Systems, Inc. and others.  All rights reserved.
+  ~
+  ~ This program and the accompanying materials are made available under the
+  ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
+  ~ and is available at http://www.eclipse.org/legal/epl-v10.html
+  -->
 
- This program and the accompanying materials are made available under the
- terms of the Eclipse Public License v1.0 which accompanies this distribution,
- and is available at http://www.eclipse.org/legal/epl-v10.html
--->
+<!-- vi: set et smarttab sw=4 tabstop=4: -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>odlparent-lite</artifactId>
-        <version>2.0.4</version>
-        <relativePath/>
+        <groupId>org.opendaylight.mdsal</groupId>
+        <artifactId>mdsal-model-binding2-parent</artifactId>
+        <version>0.12.0-SNAPSHOT</version>
+        <relativePath>../../binding2/mdsal-model-binding2-parent</relativePath>
     </parent>
 
-    <groupId>org.opendaylight.mdsal.model.binding2</groupId>
-    <version>0.11.1-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>model-aggregator</artifactId>
-    <packaging>pom</packaging>
+    <groupId>org.opendaylight.mdsal.model.binding2</groupId>
+    <artifactId>yang-ext</artifactId>
+    <version>2013.09.07.10.2-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
+    <packaging>bundle</packaging>
 
-    <modules>
-        <module>yang-ext</module>
-    </modules>
   <!--
       Maven Site Configuration
 
