--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                         <dependency>
                             <groupId>org.opendaylight.yangtools</groupId>
                             <artifactId>checkstyle-logging</artifactId>
-                            <version>2.0.0-SNAPSHOT</version>
+                            <version>1.2.0</version>
                         </dependency>
                     </dependencies>
                 </plugin>
