--- a/binding2/prototype/pom.xml
+++ b/binding2/prototype/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
